# luhsoccer_firmware

./: .gitlab-ci.yml  .gitmodules  LICENSE  rust-toolchain.toml
basestation/: .gitignore  Cargo.toml  Embed.toml  build.rs  memory.x  pins.md
basestation/.cargo/: config.toml
basestation/src/: converter.rs  main.rs  network.rs  pins.rs  rf.rs  robot_state.rs  status.rs  usb_serial.rs
docker/: Dockerfile
dribblercontroller/: Cargo.toml  build.rs
dribblercontroller/.cargo/: config.toml
dribblercontroller/src/: escon.rs  main.rs  servo.rs
embassy/embassy-rp/src/: i2c.rs
libs/: .gitignore  Cargo.toml
libs/.cargo/: config.toml
libs/.config/: nextest.toml
libs/atsam4-hal/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  build.rs  deny.toml
libs/atsam4-hal/.cargo/: config
libs/atsam4-hal/.github/workflows/: audit.yml  c.yml  rust.yml
libs/atsam4-hal/c/: README.md  build.bash  component_efc.h  efc.c  efc.h
libs/atsam4-hal/src/: adc.rs  chipid.rs  clock.rs  delay.rs  efc.rs  gpio.rs  lib.rs  pdc.rs  prelude.rs  rtt.rs  sealed.rs  serial.rs  spi.rs  static_memory_controller.rs  timer.rs  watchdog.rs
libs/atsam4-hal/src/ethernet/: builder.rs  controller.rs  descriptor_table.rs  eui48.rs  mod.rs  receiver.rs  rx.rs  smoltcp.rs  transmitter.rs  tx.rs
libs/atsam4-hal/src/ethernet/phy/: anar.rs  anlpar.rs  bmcr.rs  bmsr.rs  mod.rs
libs/atsam4-hal/src/udp/: bus.rs  endpoint.rs  mod.rs
libs/bmi270/: Cargo.toml
libs/bmi270/src/: data.rs  definitions.rs  error.rs  lib.rs
libs/dribbler/: Cargo.toml
libs/dribbler/src/: dshot.rs  lib.rs
libs/intra-comms/: Cargo.toml
libs/intra-comms/src/: definitions.rs  lib.rs  uart.rs
libs/kicker/: Cargo.toml
libs/kicker/src/: asynch.rs  dac.rs  lib.rs
libs/mainboard/: Cargo.toml
libs/mainboard/src/: lib.rs
libs/pidcontroller/: Cargo.toml
libs/pidcontroller/src/: lib.rs
libs/protobuf/: Cargo.toml  build.rs
libs/protobuf/files/: CMakeLists.txt
libs/protobuf/src/: lib.rs
libs/protobuf/src/proto/: .gitignore
libs/sky66112/: Cargo.toml
libs/sky66112/src/: lib.rs
libs/sx1280/: .gitignore  Cargo.toml
libs/sx1280/src/: commands.rs  definitions.rs  error.rs  lib.rs
libs/sync/: Cargo.toml
libs/sync/src/: lib.rs  observable.rs
libs/tmc4671/: Cargo.toml
libs/tmc4671-macros/: Cargo.toml
libs/tmc4671-macros/src/: lib.rs
libs/tmc4671/src/: commands.rs  controller.rs  lib.rs  nonblocking.rs
libs/units/: Cargo.toml  README.md
libs/units/src/: display.rs  extensions.rs  lib.rs  types.rs
maincontroller/: Cargo.toml  Embed.toml
maincontroller/src/: buzzer.rs  configprovider.rs  dribbler.rs  lightbarrier.rs  main.rs  motorcontroller.rs  power.rs  rf.rs  ui.rs  watchdog.rs
motorcontroller/: Cargo.toml  memory.x  pid-with-disturbance.ods  pid.ods  step.csv
motorcontroller/.cargo/: config.toml
motorcontroller/src/: configprovider.rs  kicker.rs  main.rs  maincontroller.rs  odometry.rs
