[package]
name = "base_station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.3"
fugit = "0.3.6"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
dwt-systick-monotonic = { version = "1.1.0", features = ["extend"] }
paste = "1.0.9"
embedded-alloc = "0.5"
embedded-hal = "0.2.7"
embedded-hal-nb = "1.0.0-alpha.1"
atsam4-hal = { version = "0.3.0", path = "../libs/atsam4-hal", default_features = false, features = [
  "atsam4e8c",
  "usb",
] }
usbd-serial = "0.1.1"
smart-leds = "0.3.0"
ws2812-timer-delay = "0.3.0"
fixed = "1.22"
postcard = "1.0"
prost = { version = "0.11", default-features = false, features = [
  "prost-derive",
] }
az = "1.2"

sx1280 = { path = "../libs/sx1280" }
sky66112 = { path = "../libs/sky66112" }
protobuf = { path = "../libs/protobuf" }
intra-comms = { path = "../libs/intra-comms" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
