[package]
name = "dribblercontroller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "defmt",
  "nightly",
  "unstable-traits",
  "time-driver",
  "critical-section-impl",
  "rom-func-cache",
  "intrinsics",
  "rom-v2-intrinsics",
  "boot2-w25q080",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "arch-cortex-m",
  "defmt",
  "integrated-timers",
  "executor-thread",
  "executor-interrupt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
  "unstable-traits",
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "defmt",
] }
embedded-hal = "0.2"
embedded-hal-async = "0.2.0-alpha.1"

cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-reset = "0.1"
static_cell = "1.1"

fixed = "1.22"
fixed-macro = "1.2"

sync = { path = "../libs/sync" }

[patch.'https://github.com/embassy-rs/embassy.git']
embassy-rp = { path = "../embassy/embassy-rp" }
embassy-executor = { path = "../embassy/embassy-executor" }
embassy-time = { path = "../embassy/embassy-time" }
embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal" }
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-futures = { path = "../embassy/embassy-futures" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
