[package]
name = "maincontroller"
version = "0.1.0"
edition = "2021"
authors = ["sebastian <sebastian.knackstedt@luhbots.de"]
homepage = "https://luhbots-hannover.de"
license = "MIT"
repository = "https://gitlab.projekt.uni-hannover.de/mzh-team_luhbots_soccer/luhsoccer_firmware.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "defmt",
  "nightly",
  "unstable-traits",
  "time-driver",
  "critical-section-impl",
  "intrinsics",
  "rom-v2-intrinsics",
  "boot2-w25q080",
  "unstable-pac",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "arch-cortex-m",
  "defmt",
  "integrated-timers",
  "executor-thread",
  "executor-interrupt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
  "unstable-traits",
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560", features = [
  "defmt",
] }
embedded-hal = "0.2"
embedded-hal-async = "0.2.0-alpha.1"

cortex-m = "0.7"
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3.0"
static_cell = "1.1"

fixed = "1.22"
fixed-macro = "1.2"
az = "1.2"
serde = { version = "1.0.160", default-features = false, features = [
  "derive",
  "serde_derive",
] }
fugit = "0.3.6"
postcard = "1.0"
crc = "3.0"
pio-proc = "0.2"
pio = "0.2"
rand_distr = { version = "0.4", default_features = false }
embedded-io = { version = "0.4", features = ["async"] }

sky66112 = { path = "../libs/sky66112" }
sx1280 = { path = "../libs/sx1280" }
intra-comms = { path = "../libs/intra-comms" }
sync = { path = "../libs/sync" }

[patch.'https://github.com/embassy-rs/embassy.git']
embassy-rp = { path = "../embassy/embassy-rp" }
embassy-executor = { path = "../embassy/embassy-executor" }
embassy-time = { path = "../embassy/embassy-time" }
embassy-embedded-hal = { path = "../embassy/embassy-embedded-hal" }
embassy-sync = { path = "../embassy/embassy-sync" }
embassy-futures = { path = "../embassy/embassy-futures" }

[features]
test = ["test_dribbler"]
test_dribbler = []

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
