[package]
name = "bmi270"
version = "0.0.1"
edition = "2021"
authors = ["Sebastian Knackstedt <sebastian.knackstedt@luhbots.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"] }
nb = "1.0"
defmt = "0.3"
fugit = "0.3.6"
fixed = "1.23"
az = "1.2"
