[package]
name = "intra-comms"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = "1.0"
defmt = "0.3"
heapless = "0.7"
crc = "3.0"
cobs = { version = "0.2", default-features = false }
konst = "0.3"
embedded-io = { version = "0.4", features = ["async"] }

[features]
