[package]
name = "kicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blanket = "0.2"
embedded-hal = "0.2"
nb = "1.0"
defmt = "0.3"

pio = "0.2"
pio-proc = "0.2"
#rp2040-hal = "0.7"

embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "f2c2536cf3d67e4e28616f631b6bdde789b15560" }

units = { path = "../units", default-features = false }
