[package]
name = "tmc4671"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tmc4671-macros = { path = "../tmc4671-macros" }
blanket = "0.2"
embedded-hal = "0.2"
embedded-hal-async = { version = "0.2.0-alpha.0", optional = true }
nb = "1.0"
cortex-m = "0.7"
fugit = "0.3"
defmt = "0.3"

paste = "1.0"

[dev-dependencies]
log = "0.4"

[features]
async = ["dep:embedded-hal-async"]
