[package]
name = "units"
version = "0.2.0"
edition = "2021"
description = "Si units for typesafe calculations"
license = "MIT or Apache-2.0"
repository = "https://git.mkaenner.de/max/units-rs.git"
readme = "README.md"
keywords = ["si", "units"]
categories = ["Science", "Simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.16"
num-traits = { version = "0.2", default-features = false }
defmt = { version = "0.3", optional = true }
fixed = { version = "1.23.0", optional = true }
serde = { version = "1.0", default-features = false, features = [
  "derive",
], optional = true }

[features]
default = ["std"]
defmt = ["dep:defmt"]
fixed = ["dep:fixed"]
std = ["num-traits/std"]
serde = ["dep:serde"]
